--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
       <li class="push"><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <div class="container zone red">project</div>
+  <div class="container zone red"><a href="https://play.google.com/store/apps/details?id=com.companyname.SpendingTrackerApp"><img class="cover" src="app.png"</a></div>
   <div class="zone blue grid-wrapper">
 
   </div>
