--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <li class="push"><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <div class="container zone red">About</div>
+  <div class="container zone"><img class="cover" src="img-01.jpg"></div>
   <div class="zone blue grid-wrapper">
 
   </div>
